Changing labels on axis and implementing graph showing standard dev over intensity

--- a/scatterjs/main.html
+++ b/scatterjs/main.html
@@ -18,9 +18,10 @@
   <div style="display: table-cell">
     <form method="GET">
       <div id="dataselectcontainer"></div>        
-      <div>115 <input type="text" name="min115" value="-100"/> <input type="text" name="max115" value="100"/></div>
-      <div>116 <input type="text" name="min116" value="-100"/> <input type="text" name="max116" value="100"/></div>
-      <div>117 <input type="text" name="min117" value="-100"/> <input type="text" name="max117" value="100"/></div>
+      <div>IL1B <input type="text" name="minIL1B" value="-100"/> <input type="text" name="maxIL1B" value="100"/></div>
+      <div>IFNG <input type="text" name="minIFNG" value="-100"/> <input type="text" name="maxIFNG" value="100"/></div>
+      <div>IL1B+IFNG <input type="text" name="minIL1B+IFNG" value="-100"/> <input type="text" name="maxIL1B+IFNG" value="100"/></div>
+      <div>zscore <input type="text" name="zscore" value="2.58" /></div>
       <div>#points <input type="text" name="npoints" value="2000"/></div>
       <input type="submit" value="Update"/>
       <input type="reset" value="Reset!" />
